# paddleocr-aksara-jawa

./: .gitignore  README.md  main.py  pyproject.toml  results.json
annotation/: .env.example  docker-compose.yml  dreamsea_manifests.txt  image_urls.txt  khastara_shopping_list.csv  label_studio_config.xml  leiden_dor15.json  leiden_or1871_a.json  leiden_or1871_b.json  leiden_or1871_c.json  leiden_or1928.json  manifests.txt
assets/: corpus_jawa.txt  corpus_jawa_pasangan.txt
data/: eval_real_candidates.txt
data/eval/: Label.txt  dataset_stats.json  ground_truth.jsonl
data/synthetic/: Label.txt  dataset_stats.json  ground_truth.jsonl
demo/: README.md  app.py  requirements.txt
docs/: annotation_guide.md  data_report.md  hf_README.md  runpod_execute.md  runpod_setup.md  runpod_tutorial.md  status.md  training_runs.md
scripts/: annotator_agreement.py  apply_triage.py  build_pasangan_corpus.py  build_triage_page.py  collect_manuscripts.py  convert_format.py  convert_paddleformers_to_peft.py  diagnose_peft_keys.py  dreamsea_collect.py  evaluate.py  extract_real_corpus.py  generate_aksara.py  hf_push_dataset.py  khastara_collect.py  labelstudio_to_paddleocr.py  pick_eval_candidates.py  predict_paddleocr.py  runpod_bootstrap.sh  split_pdfs.py
training/: aksara_jawa_lora_config.yaml  aksara_jawa_lora_export.yaml  ocr_vl_sft-test_aksara_jawa.jsonl  ocr_vl_sft-train_aksara_jawa.jsonl
