[project]
name = "paddleocr-aksara-jawa"
version = "0.1.0"
description = "Aksara Jawa (Javanese Script) OCR fine-tuning with PaddleOCR-VL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Yudha Setyaji", email = "setyajiyudha299@gmail.com" }]
keywords = ["ocr", "aksara-jawa", "javanese", "paddleocr", "indonesian"]

dependencies = [
    "pillow>=12.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=2.0.0",
    "faker>=20.0.0",
    # paddleocr (system-pip) and transformers<5 in the eval extra both
    # tolerate huggingface_hub<1.0, so a single project-level pin works.
    "huggingface_hub>=0.20,<1.0",
    "jiwer>=3.0.0",
    "rapidfuzz>=3.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle>=3.2.1",
    "paddleocr>=3.0.0",
]
eval = [
    # torch upper-bound: 2.6+ uses cu126, requires CUDA driver 12.5+. The
    # RunPod `runpod-torch-v240` template ships system CUDA 12.4, so torch 2.8
    # silently segfaults at import (cudaGetDriverEntryPointByVersion missing).
    # 2.5.x is the last cu124-native release. Lift the bound when the pod
    # template upgrades to CUDA 12.6+.
    "torch>=2.4,<2.6",
    # PaddleOCR-VL's modeling code (modeling_paddleocr_vl.py) was authored
    # against transformers 4.x — it relies on ROPE_INIT_FUNCTIONS["default"]
    # (removed in 5.0) and `input_embeds` (renamed `inputs_embeds` in 5.x).
    # The official inference snippet (HF discussion #1) requires >=4.55.
    # Stay below 5.0 until upstream ships a transformers-5-compatible model.
    "transformers>=4.55,<5.0",
    "accelerate>=0.34.0",
    "einops>=0.7.0",
    "torchvision>=0.19.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0",   # transformers' LlamaConverter needs it to parse tokenizer.model
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddlepaddle" }